@@ -11,7 +11,7 @@ import xarray as xr
 
 from ctsm import unit_testing
 from ctsm.config_utils import lon_range_0_to_360
-from ctsm.modify_fsurdat.modify_fsurdat import ModifyFsurdat
+from ctsm.modify_input_files.modify_fsurdat import ModifyFsurdat
 
 # Allow test names that pylint doesn't like; otherwise hard to make them
 # readable
