@@ -12,7 +12,7 @@ _CTSM_PYTHON = os.path.join(os.path.dirname(os.path.realpath(__file__)),
                             'python')
 sys.path.insert(1, _CTSM_PYTHON)
 
-from ctsm.modify_mesh_mask.mesh_mask_modifier import main
+from ctsm.modify_input_files.mesh_mask_modifier import main
 
 if __name__ == "__main__":
     main()
