@@ -12,8 +12,7 @@
 # - idealized = True, they will take on default values hardwired in the
 # code. Details in comments below.
 # Variables with values already set, may be changed to other values. If
-# they get omitted, they will obtain the same default values found in
-# modify_template.cfg.
+# they get omitted, they will obtain the same default values found here.
 # ------------------------------------------------------------------------
 
 # Path and name of input surface dataset (str)
