@@ -8,8 +8,7 @@
 #
 # Variables with FILL_THIS_IN must be specified.
 # Variables with values already set, may be changed to other values. If
-# they get omitted, they will obtain the same default values found in
-# modify_template.cfg.
+# they get omitted, they will obtain the same default values found here.
 # Variables with UNSET may be specified.
 # ------------------------------------------------------------------------
 
